model trainer added

--- a/research/06_feature_selection.ipynb
+++ b/research/06_feature_selection.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,23 +138,23 @@
     "\n",
     "\n",
     "    def feature_selection(self):\n",
-    "        export_df = self.df.drop(columns=[\"processor_brand\",\"processor_model\",\"processor_gen\",\"thread\",\"name\",\"no_of_votes\",\"rating\",\"camera\",\"thickness\",\"usb3\",\"bluetooth\",\"inbuilt_microphone\",\"usb2\",\"hdd\",\"display_port\",\"pixel_width\",\"thunderbolt\",\"wifi\",\"ethernet\",\"num_of_cell\",\"mcr\",\"os\",\"antiglare\",\"type_c\",\"fingerprint_sensor\",\"aspect_ratio\",\"cache\"])\n",
+    "        export_df = self.df.drop(columns=[\"processor_brand\",\"processor_model\",\"processor_gen\",\"thread\",\"name\",\"no_of_votes\",\"rating\",\"camera\",\"thickness\",\"usb3\",\"bluetooth\",\"inbuilt_microphone\",\"usb2\",\"hdd\",\"display_port\",\"pixel_width\",\"pixel_height\",\"thunderbolt\",\"wifi\",\"ethernet\",\"num_of_cell\",\"mcr\",\"os\",\"antiglare\",\"type_c\",\"fingerprint_sensor\",\"aspect_ratio\",\"cache\"])\n",
     "        self.export_csv(export_df)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-08-23 00:17:21,233: INFO :common :yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-08-23 00:17:21,233: INFO :common :yaml file: params.yaml loaded successfully]\n",
-      "[2024-08-23 00:17:21,241: INFO :common :created directory at: root]\n",
-      "[2024-08-23 00:17:21,243: INFO :common :created directory at: artifacts/feature_selection]\n"
+      "[2024-08-23 14:58:03,304: INFO :common :yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-08-23 14:58:03,320: INFO :common :yaml file: params.yaml loaded successfully]\n",
+      "[2024-08-23 14:58:03,323: INFO :common :created directory at: root]\n",
+      "[2024-08-23 14:58:03,325: INFO :common :created directory at: artifacts/feature_selection]\n"
      ]
     }
    ],
